# agent-identity

./: .pre-commit-config.yaml  Taskfile.yml  generate_qr_code.py  paper.tex  pyproject.toml  requirements.dev.txt  requirements.txt
docs/tex/: __init__.py  generate.py
docs/tex/artifacts/: agent_blueprint.yaml  agent_identity.yaml  configure_identifier_uri_scopes.yaml  doc.yaml  federated_identity_credential.yaml  grant_data_contributor_role.yaml  intro.yaml  managed_identity.yaml
docs/tex/models/: document_config.py  document_content.py
scripts/: ConfigureIdentifierURIandScopes.ps1  ConnectMgGraph.ps1  CreateAgentBlueprint.ps1  CreateAgentIdentity.ps1  CreateFederatedIdentityCredential.ps1  CreateUserManagedIdentity.ps1  DeleteAgentBlueprints.ps1  DeleteAgentIdentities.ps1  DeleteFederatedIdentityCredential.ps1  DeleteUserManagedIdentity.ps1  ListAgentBlueprints.ps1  ListAgentIdentities.ps1  ListFederatedIdentityCredentials.ps1  ListIdentifierURIandScopes.ps1  RemoveIdentifierURI.ps1  RemoveScope.ps1  RemoveStoragePermission.ps1  SetupStoragePermissions.ps1
